--- a/resources.css
+++ b/resources.css
@@ -36,15 +36,12 @@ a:hover, a:active {
 
 /*======== Header ========*/
 
-.page-header {
+.header {
 	text-align: center;
-	margin: 15px 0 0 0;
-	padding-bottom: 15px; 
+	margin: 15px 15px;
 }
 
-.page-header img {
-	position: absolute;
-	left: 3%;
+.header img {
 	margin-top: 5px;
 }
 
